# AWS_Community_Day_Ecuador_2025

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: huggingface.yaml
data/: historical_simulation_9023624.csv
notebooks/: 01_benchmark.ipynb  01_testing.ipynb
notebooks/AutogluonModels/ag-20250923_030452/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_030520/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_030825/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031200/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031409/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031432/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031503/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031536/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031632/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031703/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031734/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250923_031846/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250924_005541/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250924_005643/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250924_010809/: learner.pkl  predictor.pkl
notebooks/AutogluonModels/ag-20250924_011013/: learner.pkl  predictor.pkl
src/chronos_conference/: settings.py
(+77 files in other folders)
