[project]
name = "chronos_conference"
version = "0.1.0"
description = "A Python package to execute most common models for retail"
authors = [
  { name = "Sebastian Sarasti", email = "sebitas.alejo@hotmail.com" }
]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "autogluon==1.4.0",
    "kagglehub==0.3.13",
    "numpy==2.1.3",
    "pandas==2.3.2",
    "utilsforecast==0.2.11",
    "statsforecast==2.0.1",
    "ipywidgets",
    "ipykernel",
    "pre_commit==4.3.0",
    "streamlit==1.50.0",
    "plotly==6.3.0",
    "nbformat==5.10.4"
]

[project.urls]
Repository = "https://github.com/sebassaras02/AWS_Community_Day_Ecuador_2025"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"